--- a/progset3.tex
+++ b/progset3.tex
@@ -4,7 +4,6 @@
 \usepackage{float}
 \usepackage{pgfplots}
 \usepackage{subcaption}
-\usepackage{filecontents}
 \pgfplotsset{compat=1.18}
 \definecolor{dg}{RGB}{2,101,15}
 \newtheoremstyle{dotlessP}{}{}{}{}{\color{dg}\bfseries}{}{ }{}
@@ -208,69 +207,265 @@ Using KK as a starting point for the various random algorithms we get varying le
 \begin{table}[H]
    \centering
    \resizebox{\textwidth}{!}{%
-   \begin{tabular}{c|c|c|c|c|c|c|c}
-       Trial & KK & Repeated Random & Hill Climbing & Simulated Annealing & Repeated Random PP & Hill Climbing PP & Simulated Annealing PP \\
-         \hline
-            1 & 243525 & 365989989 & 130413807 & 820476299 & 721021115 & 1649 & 1193 \\
-            2 & 75459 & 749147571 & 49649365 & 110886859 & 453801311 & 993 & 543 \\
-            3 & 333585 & 60791321 & 592031675 & 410208631 & 382961939 & 103 & 95 \\
-            4 & 364573 & 1019154041 & 525860527 & 559980607 & 572481879 & 2505 & 215 \\
-            5 & 499274 & 1663890668 & 9600502 & 177089450 & 425379162 & 324 & 12 \\
-            6 & 50679 & 983355655 & 61558941 & 91014911 & 483885527 & 537 & 619 \\
-            7 & 6297 & 289923365 & 141851981 & 93675167 & 391212795 & 11 & 733 \\
-            8 & 79255 & 52619949 & 41953499 & 186719479 & 530051507 & 611 & 115 \\
-            9 & 17592 & 450914866 & 326632432 & 13836614 & 409700748 & 2032 & 538 \\
-            10 & 46863 & 155134253 & 393724045 & 226479395 & 504317933 & 1009 & 1207 \\
-            11 & 43178 & 334809164 & 208661436 & 297150226 & 309984058 & 2300 & 26 \\
-            12 & 14289 & 95311037 & 106630491 & 525908655 & 311990773 & 145 & 319 \\
-            13 & 7964 & 814199544 & 120018340 & 153072086 & 582754252 & 140 & 462 \\
-            14 & 1084011 & 351859313 & 101787919 & 76680837 & 455126029 & 423 & 99 \\
-            15 & 125164 & 503947338 & 301696718 & 733990202 & 517703010 & 54 & 522 \\
-            16 & 111640 & 331168558 & 503991656 & 150497122 & 513564604 & 682 & 380 \\
-            17 & 52602 & 250699462 & 10557910 & 833848632 & 279942744 & 1916 & 220 \\
-            18 & 48789 & 1132800455 & 16538989 & 37511737 & 310552989 & 405 & 109 \\
-            19 & 714008 & 370595408 & 45397324 & 211348136 & 604250196 & 118 & 882 \\
-            20 & 104493 & 249088631 & 111054379 & 55343659 & 502681395 & 923 & 533 \\
-            21 & 1528478 & 238734766 & 195013800 & 568113386 & 450889340 & 1178 & 432 \\
-            22 & 26423 & 422879069 & 146569383 & 939114721 & 543061263 & 145 & 123 \\
-            23 & 145283 & 1236219271 & 55103153 & 221245635 & 418310477 & 511 & 161 \\
-            24 & 13428 & 168078920 & 466859430 & 268728928 & 378196608 & 368 & 330 \\
-            25 & 25127 & 449412203 & 410386189 & 466687861 & 681660055 & 487 & 113 \\
-            26 & 118098 & 250827774 & 42106260 & 37768412 & 314325108 & 922 & 154 \\
-            27 & 620257 & 191868027 & 106642211 & 109380535 & 778808941 & 1271 & 113 \\
-            28 & 174312 & 51826154 & 33569164 & 206867538 & 492283932 & 2068 & 584 \\
-            29 & 369267 & 940519427 & 591488585 & 215969543 & 395210615 & 1737 & 17 \\
-            30 & 34617 & 30235707 & 82435633 & 52819311 & 454803825 & 369 & 889 \\
-            31 & 79954 & 460060798 & 498708382 & 442097596 & 387721818 & 156 & 582 \\
-            32 & 102734 & 71237852 & 111295898 & 651610774 & 399201556 & 1824 & 70 \\
-            33 & 56344 & 296305734 & 233808082 & 33672900 & 760619780 & 1442 & 84 \\
-            34 & 67309 & 206556833 & 386724715 & 115222913 & 368287833 & 2389 & 103 \\
-            35 & 136493 & 538893389 & 52846929 & 67880597 & 390770209 & 43 & 535 \\
-            36 & 330164 & 39215638 & 610324334 & 716191394 & 333574470 & 32 & 76 \\
-            37 & 142413 & 262801565 & 126215233 & 285896785 & 1089348671 & 719 & 25 \\
-            38 & 191694 & 51841656 & 6374792 & 352337616 & 506461030 & 614 & 118 \\
-            39 & 133514 & 142928562 & 389524862 & 134834086 & 380314252 & 424 & 132 \\
-            40 & 186766 & 460056552 & 1010404346 & 233133226 & 424693488 & 28 & 112 \\
-            41 & 9981 & 352892269 & 33401523 & 773077949 & 400312089 & 109 & 261 \\
-            42 & 271 & 26638341 & 121317129 & 2258165 & 487764263 & 1567 & 323 \\
-            43 & 328860 & 259517152 & 323308008 & 514894280 & 352148016 & 366 & 10 \\
-            44 & 488087 & 75670641 & 155951977 & 290257285 & 275895987 & 2027 & 413 \\
-            45 & 20099 & 97684499 & 8263465 & 67611609 & 502274553 & 129 & 195 \\
-            46 & 152253 & 84980193 & 1105069359 & 806007089 & 538698021 & 1391 & 127 \\
-            47 & 25640 & 546039342 & 43459306 & 559689932 & 639759114 & 206 & 186 \\
-            48 & 3313304 & 26877136 & 544196480 & 1421963684 & 388432910 & 698 & 48 \\
-            49 & 290118 & 113329412 & 91852728 & 260402170 & 512143770 & 334 & 222 \\
-            50 & 102994 & 209427994 & 91332756 & 1995555168 & 359393702 & 690 & 58 \\
-            Average & 264750.44 & 370579149.3 & 239754098.3 & 371540195.8	& 473374593.2 &	822.48 &	308.36
-    \end{tabular}}
-    \caption{Experimental Data}
+\begin{tabular}{c|c|c|c|c|c|c|c}
+Trial         & KK          & Repeated Random & Hill Climbing & Simulated Annealing & Repeated Random PP & Hill Climbing PP & Simulated Annealing PP \\
+\hline
+1             & 1.5269E+04  & 9.2297E+07      & 3.2599E+08    & 3.4130E+08          & 8.9000E+01         & 4.5000E+01       & 8.2100E+02             \\
+2             & 7.7338E+04  & 8.4121E+07      & 6.6826E+08    & 2.7678E+12          & 2.9600E+02         & 1.0120E+03       & 3.2600E+02             \\
+3             & 1.1203E+05  & 2.4554E+08      & 2.7211E+08    & 2.3554E+12          & 6.0000E+00         & 1.5460E+03       & 2.0000E+00             \\
+4             & 8.1003E+04  & 8.4224E+07      & 2.4709E+08    & 1.2565E+08          & 3.5000E+01         & 1.2500E+02       & 6.1100E+02             \\
+5             & 3.7228E+05  & 2.6170E+07      & 1.0476E+09    & 2.4529E+12          & 3.8000E+02         & 3.3280E+03       & 4.2200E+02             \\
+6             & 1.2562E+06  & 3.4631E+07      & 1.1780E+08    & 1.6020E+12          & 1.5200E+02         & 4.3600E+02       & 1.4380E+03             \\
+7             & 8.5595E+05  & 1.1392E+08      & 6.8701E+08    & 3.5500E+12          & 1.6400E+02         & 2.1940E+03       & 2.6000E+01             \\
+8             & 1.1060E+04  & 4.9036E+08      & 2.4033E+08    & 6.7468E+07          & 1.4800E+02         & 2.9600E+02       & 4.2000E+01             \\
+9             & 4.7816E+04  & 1.4039E+08      & 3.6860E+08    & 1.8312E+12          & 2.5000E+02         & 3.3200E+02       & 2.1200E+02             \\
+10            & 3.3936E+05  & 4.0383E+07      & 4.2453E+08    & 2.6042E+11          & 7.5000E+01         & 1.5290E+03       & 6.5000E+01             \\
+11            & 8.9918E+04  & 3.1190E+08      & 3.3440E+08    & 7.1082E+11          & 1.1400E+02         & 1.9600E+02       & 5.2600E+02             \\
+12            & 1.0189E+05  & 3.2844E+08      & 2.5067E+08    & 1.5048E+08          & 2.2000E+01         & 3.1000E+02       & 4.5000E+02             \\
+13            & 1.8042E+05  & 7.5586E+07      & 8.3096E+07    & 1.0534E+09          & 3.0100E+02         & 8.4700E+02       & 8.6300E+02             \\
+14            & 7.0068E+05  & 1.9517E+09      & 3.9282E+07    & 6.8730E+08          & 3.1000E+02         & 1.1800E+02       & 4.8000E+02             \\
+15            & 4.0577E+05  & 8.9349E+07      & 1.2883E+08    & 5.1888E+08          & 2.4300E+02         & 9.9000E+01       & 1.0000E+00             \\
+16            & 6.0978E+05  & 3.7563E+08      & 2.0401E+08    & 1.8722E+08          & 6.0000E+01         & 2.2920E+03       & 8.9600E+02             \\
+17            & 3.9164E+04  & 2.5967E+08      & 3.6654E+08    & 4.7549E+11          & 5.8000E+01         & 7.0400E+02       & 4.2000E+02             \\
+18            & 1.0526E+04  & 2.7780E+08      & 3.9465E+08    & 2.0562E+11          & 8.1600E+02         & 2.3200E+02       & 3.1660E+03             \\
+19            & 3.5846E+05  & 2.5925E+08      & 6.8376E+08    & 3.8172E+07          & 5.5900E+02         & 4.1700E+02       & 8.3000E+01             \\
+20            & 8.1528E+04  & 2.2330E+08      & 4.6781E+08    & 1.3321E+12          & 1.6400E+02         & 8.6000E+01       & 3.8000E+01             \\
+21            & 1.2118E+05  & 1.0663E+08      & 8.8258E+08    & 1.2051E+11          & 6.5300E+02         & 5.3000E+01       & 1.1000E+01             \\
+22            & 4.4672E+04  & 2.7321E+08      & 3.9867E+08    & 1.1607E+08          & 3.4600E+02         & 8.8000E+02       & 1.2000E+01             \\
+23            & 4.9547E+04  & 2.6060E+08      & 5.9217E+07    & 1.9418E+12          & 1.3300E+02         & 6.6100E+02       & 3.7100E+02             \\
+24            & 3.7817E+04  & 2.4918E+08      & 1.7899E+08    & 1.5786E+12          & 3.1000E+01         & 9.7100E+02       & 3.9900E+02             \\
+25            & 1.5693E+05  & 2.6975E+08      & 1.3960E+08    & 7.2783E+07          & 3.6800E+02         & 5.5800E+02       & 5.3400E+02             \\
+26            & 3.7676E+05  & 1.3048E+08      & 2.7662E+07    & 8.1614E+10          & 3.9000E+01         & 1.7500E+02       & 6.9000E+01             \\
+27            & 8.7432E+04  & 2.2009E+08      & 1.1457E+09    & 7.6135E+11          & 2.2000E+01         & 3.7200E+02       & 4.2000E+02             \\
+28            & 9.5367E+04  & 9.6528E+07      & 7.5871E+07    & 5.4164E+08          & 5.5000E+01         & 1.3770E+03       & 2.0900E+02             \\
+29            & 9.5827E+05  & 1.0668E+08      & 1.4818E+08    & 1.5887E+08          & 3.8700E+02         & 2.3700E+02       & 2.1700E+02             \\
+30            & 2.5586E+05  & 5.1707E+07      & 5.2706E+07    & 4.0350E+11          & 1.0200E+02         & 1.9800E+02       & 1.1520E+03             \\
+31            & 2.0241E+04  & 2.0275E+08      & 2.5450E+08    & 1.2058E+12          & 1.5100E+02         & 1.1150E+03       & 9.5300E+02             \\
+32            & 8.7144E+04  & 6.0865E+07      & 3.8646E+08    & 7.4584E+07          & 7.8000E+01         & 2.6800E+02       & 3.5800E+02             \\
+33            & 3.7411E+04  & 2.1028E+08      & 1.9882E+08    & 6.0480E+06          & 1.0900E+02         & 8.8100E+02       & 5.9000E+01             \\
+34            & 4.5029E+05  & 4.8641E+08      & 5.8740E+07    & 1.1530E+12          & 3.6300E+02         & 9.6900E+02       & 1.1000E+01             \\
+35            & 5.1998E+05  & 2.7304E+08      & 7.7025E+07    & 1.4598E+12          & 1.1900E+02         & 6.8700E+02       & 8.0100E+02             \\
+36            & 1.0024E+06  & 3.2833E+08      & 5.3115E+08    & 6.6771E+11          & 2.9100E+02         & 3.8500E+02       & 4.2900E+02             \\
+37            & 2.6817E+04  & 5.1811E+08      & 1.5846E+08    & 2.6764E+12          & 1.1300E+02         & 2.9300E+02       & 4.0700E+02             \\
+38            & 6.0440E+03  & 3.5675E+08      & 2.0014E+08    & 4.6254E+07          & 2.8000E+01         & 4.2000E+01       & 3.5800E+02             \\
+39            & 1.2156E+04  & 9.3280E+07      & 1.7574E+08    & 6.1372E+11          & 1.5400E+02         & 4.7800E+02       & 5.3800E+02             \\
+40            & 2.0252E+05  & 5.5198E+08      & 1.1352E+08    & 2.0969E+08          & 4.6000E+01         & 7.2000E+02       & 2.3400E+02             \\
+41            & 2.1161E+04  & 4.4641E+08      & 1.6415E+08    & 4.7513E+07          & 2.7000E+01         & 2.4090E+03       & 2.4700E+02             \\
+42            & 4.4796E+05  & 3.2885E+08      & 2.1893E+07    & 6.6456E+11          & 9.8000E+01         & 8.4000E+01       & 1.8000E+01             \\
+43            & 3.3886E+05  & 3.0874E+08      & 1.4521E+08    & 1.2108E+09          & 2.7700E+02         & 6.7000E+01       & 5.1500E+02             \\
+44            & 1.9766E+04  & 5.5969E+07      & 1.9389E+07    & 4.3879E+08          & 6.8000E+01         & 1.3080E+03       & 2.5600E+02             \\
+45            & 2.2385E+05  & 3.3939E+07      & 9.9334E+07    & 2.0046E+08          & 1.0000E+00         & 1.0870E+03       & 5.9100E+02             \\
+46            & 1.3878E+05  & 1.5592E+08      & 1.8094E+09    & 6.3943E+11          & 3.1000E+02         & 9.5000E+02       & 2.2400E+02             \\
+47            & 4.0279E+05  & 8.2564E+07      & 3.2429E+08    & 1.8769E+12          & 7.8100E+02         & 5.6100E+02       & 1.4900E+02             \\
+48            & 1.4166E+05  & 6.8653E+07      & 5.9801E+08    & 7.5487E+08          & 4.8300E+02         & 1.4850E+03       & 9.4500E+02             \\
+49            & 3.3202E+05  & 6.5892E+07      & 4.6061E+08    & 1.6803E+12          & 2.2000E+01         & 1.6000E+02       & 2.1824E+06             \\
+50            & 5.1903E+05  & 6.7774E+08      & 8.0286E+06    & 6.9003E+11          & 3.8000E+01         & 4.2200E+02       & 1.2000E+02             \\
+\hline
+Mean          & 257621.90   & 251520149.82    & 325328153.10  & 715316467373.46     & 198.70             & 719.94           & 44078.50               \\
+Min           & 6044        & 26169742        & 8028642       & 6048041             & 1                  & 42               & 1                      \\
+Max           & 1256180     & 1951715984      & 1809400408    & 3.54997E+12         & 816                & 3328             & 2182430                \\
+Std Deviation & 291141.2392 & 290269734.5     & 337141299.8   & 9.29982E+11         & 196.276487         & 706.210971       & 308580.599             \\
+25\%          & 45458       & 85505176        & 114588014.5   & 202767981.8         & 55.75              & 206.5            & 92.25                  \\
+50\%          & 129982.5    & 215186258.5     & 222170566     & 2.33019E+11         & 126                & 457              & 364.5                  \\
+75\%          & 375638.25   & 311114235.8     & 397662923     & 1.30055E+12         & 299.75             & 970.5            & 537                   
+\end{tabular}}
+\caption{Experimental Data}
 \end{table}
-% Scatter plot of the data, log scale for y axis different colors for each algorithm
 \begin{figure}[H]
-    \centering
-\includegraphics[width=\textwidth]{data.png}
-\caption{Scatter Plot of Experimental Data}
+   \centering 
+   \begin{tikzpicture}
+   % Scatter plot of the data, log scale for y axis
+   \begin{axis}
+         [
+              xlabel={Trial Number},
+              ylabel={Residue},
+              ymode=log,
+              ymajorgrids=true,
+              grid style=dashed,
+              legend pos=outer north east,
+              width=0.8*\textwidth,
+         ]
+         \addplot[only marks, mark=*, color=blue]
+         coordinates {
+             (1, 1.5269E+04) (2, 7.7338E+04) (3, 1.1203E+05) (4, 8.1003E+04) (5, 3.7228E+05) (6, 1.2562E+06) (7,
+             8.5595E+05) (8, 1.1060E+04) (9, 4.7816E+04) (10, 3.3936E+05) (11, 8.9918E+04) (12, 1.0189E+05) (13,
+             1.8042E+05) (14, 7.0068E+05) (15, 4.0577E+05) (16, 6.0978E+05) (17, 3.9164E+04) (18, 1.0526E+04) (19,
+             3.5846E+05) (20, 8.1528E+04) (21, 1.2118E+05) (22, 4.4672E+04) (23, 4.9547E+04) (24, 3.7817E+04) (25,
+             1.5693E+05) (26, 3.7676E+05) (27, 8.7432E+04) (28, 9.5367E+04) (29, 9.5827E+05) (30, 2.5586E+05) (31,
+             2.0241E+04) (32, 8.7144E+04) (33, 3.7411E+04) (34, 4.5029E+05) (35, 5.1998E+05) (36, 1.0024E+06) (37,
+             2.6817E+04) (38, 6.0440E+03) (39, 1.2156E+04) (40, 2.0252E+05) (41, 2.1161E+04) (42, 4.4796E+05) (43,
+             3.3886E+05) (44, 1.9766E+04) (45, 2.2385E+05) (46, 1.3878E+05) (47, 4.0279E+05) (48, 1.4166E+05) (49,
+             3.3202E+05) (50, 5.1903E+05)
+         };
+     \addlegendentry{KK}
+
+        \addplot[only marks, mark=*, color=red]
+            coordinates {
+                (1, 9.2297E+07) (2, 8.4121E+07) (3, 2.4554E+08) (4, 8.4224E+07) (5, 2.6170E+07) (6, 3.4631E+07) (7,
+                1.1392E+08) (8, 4.9036E+08) (9, 1.4039E+08) (10, 4.0383E+07) (11, 3.1190E+08) (12, 3.2844E+08) (13,
+                7.5586E+07) (14, 1.9517E+09) (15, 8.9349E+07) (16, 3.7563E+08) (17, 2.5967E+08) (18, 2.7780E+08) (19,
+                2.5925E+08) (20, 2.2330E+08) (21, 1.0663E+08) (22, 2.7321E+08) (23, 2.6060E+08) (24, 2.4918E+08) (25,
+                2.6975E+08) (26, 1.3048E+08) (27, 2.2009E+08) (28, 9.6528E+07) (29, 1.0668E+08) (30, 5.1707E+07) (31,
+                2.0275E+08) (32, 6.0865E+07) (33, 2.1028E+08) (34, 4.8641E+08) (35, 2.7304E+08) (36, 3.2833E+08) (37,
+                5.1811E+08) (38, 3.5675E+08) (39, 9.3280E+07) (40, 5.5198E+08) (41, 4.4641E+08) (42, 3.2885E+08) (43, 3.0874E+08) (44, 5.5969E+07) (45, 3.3939E+07) (46, 1.5592E+08) (47, 8.2564E+07) (48, 6.8653E+07) (49, 6.5892E+07) (50, 6.7774E+08) 
+            };
+        \addlegendentry{Repeated Random}
+
+        \addplot[only marks, mark=*, color=green]
+            coordinates {
+                (1, 3.2599E+08) (2, 6.6826E+08) (3, 2.7211E+08) (4, 2.4709E+08) (5, 1.0476E+09) (6, 1.1780E+08) (7,
+                6.8701E+08) (8, 2.4033E+08) (9, 3.6860E+08) (10, 4.2453E+08) (11, 3.3440E+08) (12, 2.5067E+08) (13,
+                8.3096E+07) (14, 3.9282E+07) (15, 1.2883E+08) (16, 2.0401E+08) (17, 3.6654E+08) (18, 3.9465E+08) (19,
+                6.8376E+08) (20, 4.6781E+08) (21, 8.8258E+08) (22, 3.9867E+08) (23, 5.9217E+07) (24, 1.7899E+08) (25,
+                1.3960E+08) (26, 2.7662E+07) (27, 1.1457E+09) (28, 7.5871E+07) (29, 1.4818E+08) (30, 5.2706E+07) (31,
+                2.5450E+08) (32, 3.8646E+08) (33, 1.9882E+08) (34, 5.8740E+07) (35, 7.7025E+07) (36, 5.3115E+08) (37,
+                1.5846E+08) (38, 2.0014E+08) (39, 1.7574E+08) (40, 1.1352E+08) (41, 1.6415E+08) (42, 2.1893E+07) (43, 1.4521E+08) (44, 1.9389E+07) (45, 9.9334E+07) (46, 1.8094E+09) (47, 3.2429E+08) (48, 5.9801E+08) (49, 4.6061E+08) (50, 8.0286E+06)
+            };
+        \addlegendentry{Hill Climbing}
+
+        \addplot[only marks, mark=*, color=orange]
+            coordinates {
+                (1, 3.4130E+08) (2, 2.7678E+12) (3, 2.3554E+12) (4, 1.2565E+08) (5, 2.4529E+12) (6, 1.6020E+12) (7,
+                3.5500E+12) (8, 6.7468E+07) (9, 1.8312E+12) (10, 2.6042E+11) (11, 7.1082E+11) (12, 1.5048E+08) (13,
+                1.0534E+09) (14, 6.8730E+08) (15, 5.1888E+08) (16, 1.8722E+08) (17, 4.7549E+11) (18, 2.0562E+11) (19,
+                3.8172E+07) (20, 1.3321E+12) (21, 1.2051E+11) (22, 1.1607E+08) (23, 1.9418E+12) (24, 1.5786E+12) (25,
+                7.2783E+07) (26, 8.1614E+10) (27, 7.6135E+11) (28, 5.4164E+08) (29, 1.5887E+08) (30, 4.0350E+11) (31,
+                1.2058E+12) (32, 7.4584E+07) (33, 6.0480E+06) (34, 1.1530E+12) (35, 1.4598E+12) (36, 6.6771E+11) (37,
+                2.6764E+12) (38, 4.6254E+07) (39, 6.1372E+11) (40, 2.0969E+08) (41, 4.7513E+07) (42, 6.6456E+11) (43, 1.2108E+09) (44, 4.3879E+08) (45, 2.0046E+08) (46, 6.3943E+11) (47, 1.8769E+12) (48, 7.5487E+08) (49, 1.6803E+12) (50, 6.9003E+11)
+            };
+        \addlegendentry{Simulated Annealing}
+
+        \addplot[only marks, mark=*, color=purple]
+            coordinates {
+                (1, 8.9000E+01) (2, 2.9600E+02) (3, 6.0000E+00) (4, 3.5E+01) (5, 3.8E+02) (6, 1.52E+02) (7, 1.64E+02) (8, 1.48E+02) (9, 2.5E+02) (10, 7.5E+01) (11, 1.14E+02) (12, 2.2E+01) (13, 3.01E+02) (14, 3.1E+02) (15, 2.43E+02) (16, 6.0E+01) (17, 5.8E+01) (18, 8.16E+02) (19, 5.59E+02) (20, 1.64E+02) (21, 6.53E+02) (22, 3.46E+02) (23, 1.33E+02) (24, 3.1E+01) (25, 3.68E+02) (26, 3.9E+01) (27, 2.2E+01) (28, 5.5E+01) (29, 3.87E+02) (30, 1.02E+02) (31, 1.51E+02) (32, 7.8E+01) (33, 1.09E+02) (34, 3.63E+02) (35, 1.19E+02) (36, 2.91E+02) (37, 1.13E+02) (38, 2.8E+01) (39, 1.54E+02) (40, 4.6E+01) (41, 2.7E+01) (42, 9.8E+01) (43, 2.77E+02) (44, 6.8E+01) (45, 1.0E+00) (46, 3.1E+02) (47, 7.81E+02) (48, 4.83E+02) (49, 2.2E+01) (50, 3.8E+01)
+            };
+        \addlegendentry{Repeated Random PP}
+        \addplot[only marks, mark=*, color=black]
+            coordinates {
+                (1, 4.5E+01) (2, 1.012E+03) (3, 1.5460E+03) (4, 1.25E+02) (5, 3.328E+03) (6,4.36E+02) (7, 2.194E+03) (8, 2.96E+02) (9,3.32E+02) (10, 1.5290E+03) (11, 1.96E+02) (12, 3.1E+02) (13, 8.47E+02) (14, 1.18E+02) (15, 9.9E+01) (16, 2.292E+03) (17, 7.04E+02) (18, 2.32E+02) (19, 4.17E+02) (20, 8.6E+01) (21, 5.3E+01) (22, 8.8E+02) (23, 6.61E+02) (24, 9.71E+02) (25, 5.58E+02) (26, 1.75E+02) (27, 3.72E+02) (28, 1.377E+03) (29, 2.37E+02) (30, 1.98E+02) (31, 1.115E+03) (32, 2.68E+02) (33, 8.81E+02) (34, 9.69E+02) (35, 6.87E+02) (36, 3.85E+02) (37, 2.93E+02) (38, 4.2E+01) (39, 4.78E+02) (40, 7.2E+02) (41, 2.409E+03) (42, 8.4E+01) (43, 6.7E+01) (44, 1.308E+03) (45, 1.087E+03) (46, 9.5E+02) (47, 5.61E+02) (48, 1.485E+03) (49, 1.6E+02) (50, 4.22E+02)
+            };
+        \addlegendentry{Hill Climbing PP}
+%Simulated Annealing PP
+%8.2100E+02
+%3.2600E+02
+%2.0000E+00
+%6.1100E+02
+%4.2200E+02
+%1.4380E+03
+%2.6000E+01
+%4.2000E+01
+%2.1200E+02
+%6.5000E+01
+%5.2600E+02
+%4.5000E+02
+%8.6300E+02
+%4.8000E+02
+%1.0000E+00
+%8.9600E+02
+%4.2000E+02
+%3.1660E+03
+%8.3000E+01
+%3.8000E+01
+%1.1000E+01
+%1.2000E+01
+%3.7100E+02
+%3.9900E+02
+%5.3400E+02
+%6.9000E+01
+%4.2000E+02
+%2.0900E+02
+%2.1700E+02
+%1.1520E+03
+%9.5300E+02
+%3.5800E+02
+%5.9000E+01
+%1.1000E+01
+%8.0100E+02
+%4.2900E+02
+%4.0700E+02
+%3.5800E+02
+%5.3800E+02
+%2.3400E+02
+%2.4700E+02
+%1.8000E+01
+%5.1500E+02
+%2.5600E+02
+%5.9100E+02
+%2.2400E+02
+%1.4900E+02
+%9.4500E+02
+%2.1824E+06
+%1.2000E+02
+        \addplot[only marks, mark=*, color=gray]
+            coordinates {
+                (1, 8.2100E+02) (2, 3.2600E+02) (3, 2.0000E+00) (4, 6.1100E+02) (5, 4.2200E+02) (6, 1.4380E+03) (7, 2.6000E+01) (8, 4.2000E+01) (9, 2.1200E+02) (10, 6.5000E+01) (11, 5.2600E+02) (12, 4.5000E+02) (13, 8.6300E+02) (14, 4.8000E+02) (15, 1.0000E+00) (16, 8.9600E+02) (17, 4.2000E+02) (18, 3.1660E+03) (19, 8.3000E+01) (20, 3.8000E+01) (21, 1.1000E+01) (22, 1.2000E+01) (23, 3.7100E+02) (24, 3.9900E+02) (25, 5.3400E+02) (26, 6.9000E+01) (27, 4.2000E+02) (28, 2.0900E+02) (29, 2.1700E+02) (30, 1.1520E+03) (31, 9.5300E+02) (32, 3.5800E+02) (33, 5.9000E+01) (34, 1.1000E+01) (35, 8.0100E+02) (36, 4.2900E+02) (37, 4.0700E+02) (38, 3.5800E+02) (39, 5.3800E+02) (40, 2.3400E+02) (41, 2.4700E+02) (42, 1.8000E+01) (43, 5.1500E+02) (44, 2.5600E+02) (45, 5.9100E+02) (46, 2.2400E+02) (47, 1.4900E+02) (48, 9.4500E+02 ) (49, 2.1824E+06) (50, 1.2000E+02)
+            };
+        \addlegendentry{Simulated Annealing PP}
+   \end{axis}
+\end{tikzpicture}
+\caption{Scatter Plot of Residue for Each Trial}
 \end{figure}
+\begin{table}[H]
+   \centering 
+   \resizebox{\textwidth}{!}{%
+    \begin{tabular}{c|c|c|c|c|c|c|c}
+Trial & KK        & Repeated Random & Hill Climbing & Simulated Annealing & Repeated Random PP & Hill Climbing PP & Simulated Annealing PP \\
+\hline
+1     & 0.0000498 & 0.1737459       & 0.0762839     & 0.1327491           & 2.2695780          & 2.3021801        & 3.3544490              \\
+2     & 0.0000403 & 0.1724927       & 0.0762072     & 0.1291368           & 2.3137960          & 2.2517900        & 3.3835809              \\
+3     & 0.0000398 & 0.1723869       & 0.0756602     & 0.1251338           & 2.2508330          & 2.2977090        & 3.7537591              \\
+4     & 0.0000370 & 0.1713462       & 0.0762548     & 0.3394859           & 2.3194182          & 2.1841419        & 3.4147062              \\
+5     & 0.0000410 & 0.1707880       & 0.0754921     & 0.1272738           & 2.3502657          & 2.0690408        & 3.3559961              \\
+6     & 0.0000370 & 0.1709871       & 0.0757141     & 0.1278837           & 2.2917082          & 2.3802140        & 3.7146499              \\
+7     & 0.0000451 & 0.1744101       & 0.0763907     & 0.1317291           & 2.2785227          & 2.1749268        & 3.3309193              \\
+8     & 0.0000381 & 0.1742330       & 0.0751688     & 0.1267581           & 2.3100679          & 2.1675520        & 3.3528168              \\
+9     & 0.0000401 & 0.1737361       & 0.0758038     & 0.1280441           & 2.2893219          & 2.3284140        & 3.7099099              \\
+10    & 0.0000372 & 0.1704578       & 0.0754380     & 0.1287229           & 2.3071690          & 2.1330559        & 3.3797269              \\
+11    & 0.0000463 & 0.1706779       & 0.0797141     & 0.1313732           & 2.4651980          & 2.1813049        & 3.4513681              \\
+12    & 0.0000367 & 0.1712940       & 0.0760572     & 0.1271760           & 2.3081019          & 2.5231960        & 3.7397938              \\
+13    & 0.0000401 & 0.1699619       & 0.0763922     & 0.1270730           & 2.2932410          & 2.1812778        & 3.3924522              \\
+14    & 0.0000379 & 0.1712461       & 0.0782928     & 0.1276569           & 2.3272240          & 2.3807909        & 3.4191968              \\
+15    & 0.0000370 & 0.1708589       & 0.0760951     & 0.1268878           & 2.2610803          & 2.3883710        & 3.4081421              \\
+16    & 0.0000412 & 0.1719148       & 0.0766768     & 0.1274631           & 2.3230910          & 2.2513607        & 3.6493833              \\
+17    & 0.0000370 & 0.1708090       & 0.0772660     & 0.1276259           & 2.2906580          & 2.2259090        & 3.4344270              \\
+18    & 0.0000379 & 0.1715560       & 0.0767398     & 0.1298370           & 2.4666100          & 2.1525152        & 3.3342280              \\
+19    & 0.0000379 & 0.1725812       & 0.0773578     & 0.1258802           & 2.3071301          & 2.3149028        & 3.7199891              \\
+20    & 0.0000379 & 0.1707163       & 0.0752959     & 0.1292858           & 2.3845742          & 2.3809278        & 3.4587970              \\
+21    & 0.0000372 & 0.1751258       & 0.0772760     & 0.1310220           & 2.3407371          & 2.2174931        & 3.4465122              \\
+22    & 0.0000420 & 0.1744070       & 0.0774169     & 0.1257160           & 2.3200600          & 2.4751730        & 3.7569017              \\
+23    & 0.0000391 & 0.1794851       & 0.0777628     & 0.1312799           & 2.3635783          & 2.2402368        & 3.4789140              \\
+24    & 0.0000370 & 0.1738722       & 0.0773497     & 0.1314101           & 2.3791220          & 2.2072430        & 3.4395320              \\
+25    & 0.0000389 & 0.1728961       & 0.0779798     & 0.1324582           & 2.4974160          & 2.5075061        & 3.3959639              \\
+26    & 0.0000379 & 0.1760552       & 0.0778890     & 0.1304920           & 2.2951190          & 2.3029761        & 3.4496539              \\
+27    & 0.0000379 & 0.1727281       & 0.0778530     & 0.1300452           & 2.3870811          & 2.2602928        & 3.5214531              \\
+28    & 0.0000372 & 0.1755679       & 0.0778639     & 0.1303890           & 2.3617990          & 2.1910889        & 3.4843800              \\
+29    & 0.0000370 & 0.1734970       & 0.0797510     & 0.1281152           & 2.3374379          & 2.2319980        & 3.5128970              \\
+30    & 0.0000460 & 0.1747911       & 0.0761158     & 0.1317821           & 2.3712950          & 2.4243093        & 3.4475751              \\
+31    & 0.0000410 & 0.1759791       & 0.0784571     & 0.1330299           & 2.3680520          & 2.3309002        & 3.4857910              \\
+32    & 0.0000458 & 0.1819363       & 0.0765138     & 0.1274421           & 2.5712850          & 2.2515202        & 3.6413062              \\
+33    & 0.0000403 & 0.1765049       & 0.0779109     & 0.1315830           & 2.3403220          & 2.3693709        & 3.7064593              \\
+34    & 0.0000381 & 0.1810451       & 0.0782709     & 0.1296499           & 2.3574369          & 2.2247143        & 3.4063742              \\
+35    & 0.0000379 & 0.1739922       & 0.0771210     & 0.1330831           & 2.3393092          & 2.3797891        & 3.4775290              \\
+36    & 0.0000401 & 0.1743562       & 0.0775728     & 0.1305189           & 2.3428280          & 2.3228621        & 3.6035342              \\
+37    & 0.0000403 & 0.1760478       & 0.0778461     & 0.1329112           & 2.4111078          & 2.2998772        & 3.5291059              \\
+38    & 0.0000372 & 0.1739519       & 0.0770049     & 0.1280622           & 2.3277388          & 2.2556989        & 3.4497991              \\
+39    & 0.0000379 & 0.1750472       & 0.0778410     & 0.1318719           & 2.5900331          & 2.3984060        & 3.6570110              \\
+40    & 0.0000458 & 0.1749792       & 0.0769870     & 0.1278980           & 2.3608530          & 2.3829482        & 3.4980040              \\
+41    & 0.0000379 & 0.1753640       & 0.0781410     & 0.1292958           & 2.3391311          & 2.2218969        & 3.4909050              \\
+42    & 0.0000389 & 0.1746020       & 0.0777249     & 0.1316762           & 2.3725479          & 2.3424420        & 3.6656001              \\
+43    & 0.0000381 & 0.1750181       & 0.0779228     & 0.1311851           & 2.3418598          & 2.1885428        & 3.4631932              \\
+44    & 0.0000472 & 0.1759679       & 0.0770171     & 0.1333389           & 2.4145181          & 2.1256559        & 3.4564631              \\
+45    & 0.0000370 & 0.1739819       & 0.0774729     & 0.1280079           & 2.3531032          & 2.3489411        & 3.6098731              \\
+46    & 0.0000391 & 0.1738150       & 0.0769639     & 0.1332021           & 2.5430059          & 2.2056830        & 3.5488560              \\
+47    & 0.0000381 & 0.1758399       & 0.0782881     & 0.1320779           & 2.3343511          & 2.1441040        & 3.4894700              \\
+48    & 0.0000391 & 0.1748581       & 0.0773289     & 0.1278501           & 2.4729629          & 2.2611771        & 3.4565830              \\
+49    & 0.0000379 & 0.1761172       & 0.0772018     & 0.1330249           & 2.3664680          & 2.4703460        & 1.9093492              \\
+50    & 0.0000379 & 0.1750410       & 0.0768602     & 0.1315291           & 2.3481619          & 2.2413547        & 3.4710712              \\
+\hline
+Mean  & 0.0000396 & 0.1739814       & 0.0771201     & 0.1339425           & 2.3591262          & 2.2818826        & 3.4741671             
+\end{tabular}}
+\caption{Time Data for Each Trial}
+\end{table}
 We notice that there are 3 distinct ``areas'' created by the different algorithms defined by whether they used
 standard or prepartitioned solutions with the latter producing the best results and the former producing the
 worst, bounding the middle ground of Karman-Karp. 
